--- a/web/src/app/components/sidebar/sidebar.component.html
+++ b/web/src/app/components/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@ style="margin-bottom: 20px">
   <ul class="navbar-nav">
     <li class="nav-item">
         <a class="nav-link" data-toggle="modal" data-target="#loginEventModal" *ngIf="!authorized" (click)="showLoginPopup($event)" href="#">Войти</a>
-        <a class="nav-link" *ngIf="authorized" (click)="handleLogout($event)" href="#">Выйти</a>
+        <a class="nav-link" data-toggle="modal" data-target="#loginEventModal" *ngIf="authorized" (click)="handleLogout($event)" href="#">Выйти</a>
     </li>
   </ul>
 </header>
