--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -10,3 +10,7 @@
 body {
   font-family: Ubuntu, sans-serif;
 }
+
+dp-time-select.dp-material .dp-time-select-controls {
+  color: #444 !important;
+}
