--- a/web/src/app/routes/event-page/event-page.component.html
+++ b/web/src/app/routes/event-page/event-page.component.html
@@ -77,6 +77,14 @@
             </tr>
           </tbody>
         </table>
+        <div *ngIf="timeLeft" class="timeleft__container">
+          <span class="text">До начала соревнования:</span>
+          <div class="timeleft">{{timeLeft}}</div>
+        </div>
+        <div *ngIf="timeEndsRegAt" class="timeleft__container">
+          <span class="text">До окончания регистрации:</span>
+          <div class="timeleft">{{timeEndsRegAt}}</div>
+        </div>      
       </div>
     </div>
     <div *ngIf="event.attendees.length > 0" class="attendees-table">
