Fixed edit event validation

--- a/web/src/app/components/edit-event-button/edit-event-button.component.html
+++ b/web/src/app/components/edit-event-button/edit-event-button.component.html
@@ -182,7 +182,7 @@
             <fa-icon class="mr-2" [icon]="faTrashAlt"></fa-icon>
             Удалить
           </button>
-          <button type="submit" class="btn btn-primary" [disabled]="!editForm.valid">
+          <button type="submit" class="btn btn-primary" [disabled]="editForm.invalid">
             Сохранить
           </button>
         </div>
