--- a/web/src/app/components/edit-user-button/edit-user-button.component.html
+++ b/web/src/app/components/edit-user-button/edit-user-button.component.html
@@ -26,29 +26,45 @@
           <div class="form-group">
             <input
               id="first-name"
-              value="{{ currentUser.firstName }}"
               class="form-control my-3"
+              [ngClass]="{'is-invalid':firstName.invalid && (firstName.dirty || firstName.touched) }"
+              [value]="firstName.value"
               formControlName="firstName"
               placeholder="Имя"
             />
+            <div class="invalid-feedback">
+              Имя не должно быть пустым
+            </div>
+          </div>
+          <div class="form-group">
             <input
               id="last-name"
-              value="{{ currentUser.lastName }}"
               class="form-control my-3"
+              [ngClass]="{'is-invalid':lastName.invalid && (lastName.dirty || lastName.touched) }"
+              [value]="lastName.value"
               formControlName="lastName"
               placeholder="Фамилия"
             />
+            <div class="invalid-feedback">
+              Фамилия не должна быть пустой
+            </div>
+          </div>
+          <div class="form-group">
             <input
               id="email"
-              value="{{ currentUser.email }}"
               class="form-control my-3"
+              [ngClass]="{'is-invalid':email.invalid && (email.dirty || email.touched) }"
+              [value]="email.value"
               formControlName="email"
               placeholder="Электронная почта"
             />
+            <div class="invalid-feedback">
+              Почта не должна быть пустой
+            </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Сохранить</button>
+          <button type="submit" class="btn btn-primary" [disabled]="editForm.invalid">Сохранить</button>
         </div>
       </form>
     </div>
