--- a/web/src/app/components/event-card/event-card.component.css
+++ b/web/src/app/components/event-card/event-card.component.css
@@ -4,9 +4,31 @@
 
 .card {
   margin: 1em 2em;
+  border: 1px solid;
 }
 
 .table td > div {
   height: 1em;
+}
 
+.card-img-top {
+  width: 100%;
+  height: 18vw;
+  object-fit: cover;
+}
+
+.card-title {
+  text-align: left;
+}
+
+.card-text {
+  text-align: left;
+}
+
+.text {
+  font-size: 2rem;
+}
+
+.timeleft {
+  font-size: 3rem;
 }
