--- a/web/src/app/components/event-card/event-card.component.html
+++ b/web/src/app/components/event-card/event-card.component.html
@@ -1,103 +1,34 @@
-<div class="card text-white bg-secondary mb-4 event-card">
-  <div class="card-body">
-    <div class="row">
-      <div class="col-sm-6">
-        <table class="table">
-          <tbody>
-            <tr style="height: 200px">
-              <th>
-                <h3 class="card-title">{{ name }}</h3>
-              </th>
-            </tr>
-            <tr>
-              <td>Организатор</td>
-              <td>
-                <span
-                    *ngIf="ownerName; else unknownOwnber"
-                    class="location"
-                  >
-                    {{ ownerName }}
-                  </span>
-                  <ng-template #unknownOwnber>
-                    <span class="longDash">&mdash;</span>
-                  </ng-template>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>Место</div>
-              </td>
-              <td>
-                <div>
-                  <span
-                    *ngIf="locationSet; else unknownLocation"
-                    class="location"
-                  >
-                    {{ location }}
-                  </span>
-                  <ng-template #unknownLocation>
-                    <span class="longDash">&mdash;</span>
-                  </ng-template>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>
-                  <span>Дата</span>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <span *ngIf="dateValid; else unknownDate" class="date">
-                    {{ date }}
-                  </span>
-                  <ng-template #unknownDate>
-                    <span class="longDash">&mdash;</span>
-                  </ng-template>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>Участники</div>
-              </td>
-              <td>
-                <div>{{ participants }}</div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div>Описание</div>
-              </td>
-              <td>
-                <div>
-                  <span
-                    *ngIf="descriptionExist; else unknownDescription"
-                    class="description"
-                  >
-                    {{ description }}
-                  </span>
-                  <ng-template #unknownDescription>
-                    <span class="longDash">&mdash;</span>
-                  </ng-template>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <a
-                href="#"
-                class="btn btn-lg btn-primary mt-5"
-                (click)="showEvent($event)"
-                >Открыть</a
-              >
-            </tr>
-          </tbody>
-        </table>
+<div class="card promoting-card">
+  <a href="#" style="padding: 0" (click)="showEvent($event)" class="btn">
+  <div class="card-body d-flex flex-row">
+    <img
+      src="/assets/avatar.jpg"
+      class="rounded-circle mr-3"
+      height="50px"
+      width="50px"
+      alt="avatar"
+    />
+
+    <div class="flex">
+      <div>
+        <h4 style="text-align: left;" class="card-title font-weight-bold mb-2">{{ name }}</h4>
       </div>
-      <div class="col-sm-6 text-right">
-        <div class="card-img-top image" [ngStyle]="image"></div>
-      </div>
+      <p class="card-text" style="text-align: left;">
+        <fa-icon [icon]="faClock"></fa-icon>
+        {{ date }}
+      </p>
     </div>
   </div>
+
+  <div class="view overlay">
+    <img class="card-img-top rounded-0" [src]="image" alt="Card image cap" />
+  </div>
+
+  <div *ngIf="timeLeft" class="card-body">
+    <div class="timeleft__container">
+      <span class="text">До начала соревнования:</span>
+      <div class="timeleft">{{ timeLeft }}</div>
+    </div>
+  </div>
+  </a>
 </div>
