Divided events to current and past

--- a/web/src/app/components/event-card/event-card.component.html
+++ b/web/src/app/components/event-card/event-card.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="view overlay">
-    <img class="card-img-top rounded-0" [src]="image" alt="Card image cap" />
+    <img class="card-img-top rounded-0" [src]="image" alt="Card image" />
   </div>
 
   <div *ngIf="timeLeft" class="card-body">
