--- a/web/src/app/components/events-table/events-table.component.html
+++ b/web/src/app/components/events-table/events-table.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <ng-content></ng-content>
   <div class="row">
     <div *ngIf="events.length === 1; else many_events">
       <div *ngFor="let event of events">
