--- a/web/src/app/routes/my-events-page/my-events-page.component.html
+++ b/web/src/app/routes/my-events-page/my-events-page.component.html
@@ -5,4 +5,21 @@
   [actions]="sidebarActions"
 ></app-sidebar>
 
-<app-events-table class="events" [events]="events"></app-events-table>
+
+<app-events-table class="events" [events]="currentEvents">
+  <div style="margin: 1em 2em">
+    <div class="text__past-events">
+      Текущие соревнования
+    </div>
+    <div class="divider"></div>
+  </div>
+</app-events-table>
+
+<app-events-table class="events" [events]="pastEvents">
+  <div style="margin: 1em 2em">
+    <div class="text__past-events">
+      Прошедшие соревнования
+    </div>
+    <div class="divider"></div>
+  </div>
+</app-events-table>
