--- a/web/src/app/components/search-event-button/search-event-button.component.html
+++ b/web/src/app/components/search-event-button/search-event-button.component.html
@@ -1,5 +1,5 @@
 <form class="form" [formGroup]="searchEventForm" (ngSubmit)="searchEvent($event)">
-  <div class="p-1 rounded rounded-pill shadow-sm">
+  <div class="p-1 shadow-sm">
     <div class="input-group">
       <input
         type="search"
@@ -9,15 +9,6 @@
         formControlName="name"
         (input)="handleChange($event.target.value)"
       />
-      <div class="input-group-append">
-        <button
-          id="button-addon1"
-          type="submit"
-          class="btn btn-link"
-        >
-          <fa-icon [icon]="faSearch"></fa-icon>
-        </button>
-      </div>
     </div>
   </div>
 </form>
